--- a/librerias/LibSlidingMenuActivity/project.properties
+++ b/librerias/LibSlidingMenuActivity/project.properties
@@ -9,4 +9,5 @@
 
 android.library=true
 # Project target.
-target=android-8
+target=android-14
+android.library.reference.1=../../../../../android-sdks/extras/google/google_play_services/libproject/google-play-services_lib
